[gd_scene load_steps=4 format=2]

[ext_resource path="res://Elements/LogicVarible.gd" type="Script" id=1]
[ext_resource path="res://GUI/VaribleSelector.tscn" type="PackedScene" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends CheckBox

func _ready():
	update_text(pressed)

func _on_Bool_toggled(button_pressed):
	update_text(button_pressed)

func update_text(by_true : bool):
	if by_true:
		text = \"True\"
	else:
		text = \"False\"
"

[node name="LogicVarible" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1012.0
margin_bottom = -571.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 104.0
margin_bottom = 32.0
mouse_filter = 2
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="Settings" type="HBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 29.0
mouse_filter = 2

[node name="Name" type="Label" parent="MarginContainer/Settings"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 23.0
text = "VAR: "

[node name="VaribleSelector" parent="MarginContainer/Settings" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 65.0
margin_bottom = 26.0
ban_signal = true

[node name="StatementSelector" type="OptionButton" parent="MarginContainer/Settings"]
margin_left = 69.0
margin_right = 98.0
margin_bottom = 26.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/Settings"]
visible = false
margin_left = 102.0
margin_right = 180.0
margin_bottom = 32.0
tab_align = 0
tabs_visible = false

[node name="Label" type="Label" parent="MarginContainer/Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 70, 0 )

[node name="Int" type="SpinBox" parent="MarginContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 70, 0 )
min_value = -9999.0
max_value = 9999.0
allow_greater = true
allow_lesser = true

[node name="String" type="LineEdit" parent="MarginContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 70, 0 )
expand_to_text_length = true

[node name="Bool" type="CheckBox" parent="MarginContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 70, 0 )
text = "True"
align = 1
script = SubResource( 1 )

[connection signal="item_selected" from="MarginContainer/Settings/VaribleSelector" to="." method="_on_VaribleSelector_item_selected"]
[connection signal="toggled" from="MarginContainer/Settings/TabContainer/Bool" to="MarginContainer/Settings/TabContainer/Bool" method="_on_Bool_toggled"]
